xee-xpath-compiler/tests/snapshots/xpath__atomize_xml_eq_false.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run_xml(r#\"<doc><a>A</a><b>B</b></doc>\"#, \"doc/a eq doc/b\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Boolean(
                    false,
                ),
            ),
        ),
    },
)
