xee-xpath-compiler/tests/snapshots/xpath__cast_as_day_time_duration_back_to_string2.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('PT90000S' cast as xs:dayTimeDuration) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "P1DT1H",
                ),
            ),
        ),
    },
)
