xee-xpath-compiler/tests/snapshots/xpath__cast_as_hex_binary.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'ff' cast as xs:hexBinary\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                Binary(
                    Hex,
                    [
                        255,
                    ],
                ),
            ),
        ),
    },
)
