xee-xpath-compiler/tests/snapshots/xpath__cast_as_language_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'en us' cast as xs:language\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: SourceSpan(
            0,
            27,
        ),
    },
)
