xee-xpath-compiler/tests/snapshots/xpath__cast_as_ncname.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foobar' cast as xs:NCName\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    NCName,
                    "foobar",
                ),
            ),
        ),
    },
)
