xee-xpath-compiler/tests/snapshots/xpath__cast_as_nmtoken_fails.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'foo bar' cast as xs:NMTOKEN\")"
---
Err(
    SpannedError {
        error: FORG0001,
        span: SourceSpan(
            0,
            28,
        ),
    },
)
