xee-xpath-compiler/tests/snapshots/xpath__cast_as_qname.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'xs:bar' cast as xs:QName\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                QName(
                    OwnedName {
                        local_name_str: "bar",
                        namespace_str: "http://www.w3.org/2001/XMLSchema",
                        prefix_str: "xs",
                    },
                ),
            ),
        ),
    },
)
