xee-xpath-compiler/tests/snapshots/xpath__cast_as_year_month_duration_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('P14M' cast as xs:yearMonthDuration) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "P1Y2M",
                ),
            ),
        ),
    },
)
