xee-xpath-compiler/tests/snapshots/xpath__cast_date_time_stamp.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"'2019-01-01T00:00:00.123+01:00' cast as xs:dateTimeStamp\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                DateTimeStamp(
                    2019-01-01T01:00:00.123+01:00,
                ),
            ),
        ),
    },
)
