xee-xpath-compiler/tests/snapshots/xpath__cast_date_time_stamp_no_millis_back_to_string.snap
---
source: xee-xpath/tests/xpath.rs
expression: "run(\"('2019-01-03T15:14:30+01:00' cast as xs:dateTimeStamp) cast as xs:string\")"
---
Ok(
    Sequence {
        stack_value: One(
            Atomic(
                String(
                    String,
                    "2019-01-03T16:14:30+01:00",
                ),
            ),
        ),
    },
)
